# jepa

./: .gitignore  0.1_verify.py  0.3_sin_fit.py  README.md  ROADMAP.md  pyproject.toml
lessons/: 0.3_cnn_mnist.py
world1/: app.py  consts.py  gen_data.py  helpers.py  linear_probe.py  train.py  training_dataset.py
