[project]
name = "jepa"
version = "0.1.0"
description = "Project for learning Joint Embedding Predictive Architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "plotext==5.3.2",
    "pygame==2.6.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.68.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

